--- a/app/src/main/res/menu/activity_formulario_aluno_menu.xml
+++ b/app/src/main/res/menu/activity_formulario_aluno_menu.xml
@@ -4,5 +4,5 @@
     <item android:id="@+id/activity_lista_alunos_menu_salvar"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_salvar_aluno"
-        android:title="Salvar o aluno"/>
+        android:title="@string/menu_salvar_aluno"/>
 </menu>
